Fix line spacing for diamond

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -27,5 +27,7 @@ h6 {
 #diamond-container {
   font-family: monospace;
   border: 2px solid black;
-  text-align: center;
+  white-space: pre;
+  line-height: 50%;
+  padding-top: 5px;
 }
